# holy-spirit

./: .env.example  .gitignore  .gitmodules  BETA_PREPRODUCTION_REPORT.md  BETA_TEST_REPORT.md  BETA_TEST_REPORT_NEW.md  README.md  app.py  beta_agent_loop_run.py  beta_e2e_mcp.py  beta_e2e_results.json  beta_full_run.py  beta_full_user_flow.py  beta_full_user_flow_new.py  beta_preproduction.py  beta_xr_copilot_run.py  docker-compose.yml  main.py  pyproject.toml  server.py
data/: _parallel_state.ingested.json  _parallel_state.json  uat_state.ingested.json
docs/: UAT-Usage-Guide.md
ke_data/: manifest.json
scripts/: ke.py  probe_mimo.py
tests/: e2e_test.py  test_beta.py  test_cache.py  test_chunking.py  test_claim_extractor_evidence.py  test_classification.py  test_code_extractors.py  test_conflict_detector.py  test_conflicts.py  test_docs_in_sync.py  test_embeddings.py  test_engine.py  test_evidence_draft.py  test_evidence_ranking.py  test_extraction.py  test_extraction_prompt.py  test_graph_neo4j.py  test_graph_schema.py  test_hybrid_search.py  test_ingest_embedding.py  test_ingest_harbour.py  test_intent_classifier.py  test_llm.py  test_llm_config.py  test_logical_gaps.py  test_maintenance.py  test_models.py  test_neo4j_provenance.py  test_provenance.py  test_provenance_tracking.py  test_query_processor.py  test_registry.py  test_reranker.py  test_semantic_dedup.py  test_store_persistence.py  test_stress_logical_gaps.py  test_transcript_evidence.py
wiki/: Architecture.md  Data-Model.md  Domain-Policies.md  Home.md  Ingestion-and-Housekeeping.md  MCP-API.md  (+3 more)
(+156 files in other folders)
