[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "knowledge-engine"
version = "0.1.0"
description = "Continuous R&D Knowledge Engine — evidence-gated transcript-to-knowledge system"
requires-python = ">=3.11"
authors = [
    { name = "ronnyckling", email = "ronnyckling@gmail.com" },
]
# Graph-first stack: Neo4j 5 is the committed storage engine (native property
# graph + native vector index). Embeddings and LLM calls go over HTTP APIs with
# retry — there is no local torch/sentence-transformers fallback.
dependencies = [
    "mcp[cli]>=1.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    "neo4j>=5.20",
    "httpx>=0.27",
    "tenacity>=8.3",
]

[project.scripts]
knowledge-engine = "knowledge_engine.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.4",
]
ui = [
    "streamlit>=1.35",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"